--- a/232.html
+++ b/232.html
@@ -33,13 +33,13 @@
         <span>- Լուսինե</span>
       </a>
     </li>
-    <li class="a">
+    <li class="a1">
       <a href="https://ananas2024.github.io/Mariam/Mariam.html">
         <i class="fa-brands fa-instagram"></i>
         <span>- Մարիամ</span>
       </a>
     </li>
-    <li class="a">
+    <li class="a1">
       <a href="https://ananas2024.github.io/Nare/Nare.html">
         <i class="fa-brands fa-instagram"></i>
         <span>- Նարե</span>
